<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<fragment
    android:id="@+id/map"
    class="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/eventMarkerSelection"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventMarkerSelection"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:id="@+id/genderIconBox"
            android:orientation="horizontal"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/genderIcon"
                android:layout_gravity="center_horizontal"
                android:id="@+id/genderIcon" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="end"
            android:layout_weight="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eventPersonName"
                android:layout_margin="3dp"
                android:text="@string/markerName"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eventInfo"
                android:layout_margin="3dp"
                android:text="@string/eventDetails"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>